--- a/index.html
+++ b/index.html
@@ -11,12 +11,21 @@
       <div class="container">
         <div id="myContainer">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-music"></span> DevTunes</a>
+            <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-music"></span> ChappyTunes</a>
           </div>
           <form class="navbar-form navbar-left" role="search">
             <div class="form-group">
-              <input type="text" class="form-control" ng-model="artist" placeholder="Artist Name" >
-              <button class="btn btn-primary" ng-click="getSongData()"> Submit </button>
+              <input type="text" class="form-control" ng-model="artist" ng-change="getSongData()" placeholder="Artist Name" >
+              <label>
+                <select ng-options="" ng-change="getSongData()">
+                  <option value="">All</option>
+                  <option value="songData.type['music-video']">Music Video</option>
+                  <option value="movie">Movie</option>
+                  <option value="musicTrack">Music</option>
+                  <option value="podcast">Podcast</option>
+                  <option value="tvShow">TV</option>
+                </select>
+              </label>
             </div>
           </form>
         </div>
